problems fixed found by findbugs